<resources>
    <dimen name="sm">14sp</dimen>
    <dimen name="md">18sp</dimen>
    <dimen name="lg">24sp</dimen>
    <string name="app_name">Mission</string>
    <string name="btn_back">◀</string>
    <string name="title_todo">TODO</string>
    <string name="btn_save_text">저 장</string>
    <string name="text_title">제목</string>
    <string name="hint_text_content">내용</string>
    <string name="alarm_text">알 람</string>
    <string name="yyyy_dd_mm">YYYY/DD/MM</string>
    <string name="time">time</string>
    <string name="btn_todo_main_back">◀</string>
    <string name="text_main_title_todo">TODO</string>
    <string name="todo">Todo</string>
    <string name="recyclerview">RecyclerView - 뷰 홀더 두개 혼용해서 보여주기</string>
    <string name="todo_project">TODO project - 할 일 어플리케이션 프로젝트</string>
    <string name="change">수정</string>
    <string name="delete">삭제</string>
    <string name="figma_one">Figma_One</string>
    <string name="figma_two">Figma_Two</string>
    <string name="headline">Headline</string>
    <string name="download">Download</string>
    <string name="supporting_text">supporting text</string>
    <string name="published_date">Published date</string>
    <string name="long_string">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</string>
    <string name="default_image">default_image</string>
    <string name="section_title">Section title</string>
    <string name="title">Title</string>
    <string name="section_text">Description duis aute irure dolor in reprehenderit in voluptate velit.</string>
    <string name="today_23_min">Today•23 min</string>
    <string name="btn_image_right_two">btn_image_right_two</string>
    <string name="btn_section_title_right_image">btn_section_title_right_image</string>
    <string name="btn_section_plus_image">btn_section_plus_image</string>
    <string name="btn_section_content_right_image">btn_section_content_right_image</string>
    <string name="artist">Artist</string>
    <string name="pause">pause</string>
    <string name="start_pause">start_pause</string>
    <string name="default_image_figma_two">default_image_figma_two</string>
    <string name="add_circle_image">add_circle_image</string>
    <string name="mic">mic</string>
    <string name="search">Search</string>
    <string name="dreams">Dreams</string>
    <string name="yesterday">Yesterday</string>
    <string name="moonlightdrive">Moonlightdrive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="part_one">Part One</string>
    <string name="part_two">Part Two</string>

</resources>