<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal"
    tools:ignore="UselessParent">

    <ImageView
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:contentDescription="@string/default_image"
      android:scaleType="centerInside"
      android:src="@drawable/default_image" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:layout_marginStart="16dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/figma_one_section_item_title"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Title" />

      <TextView
        android:id="@+id/figma_one_section_item_artist"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:text="@string/artist" />


      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ImageView
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_gravity="center_vertical"
          android:layout_marginEnd="4dp"
          android:contentDescription="@string/btn_section_plus_image"
          android:src="@drawable/add_circle" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_weight="8"
          android:text="@string/today_23_min"
          android:textSize="12sp" />

        <ImageView
          android:id="@+id/btn_play"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:contentDescription="@string/btn_section_content_right_image"
          android:scaleType="center"
          android:src="@drawable/right_button_2" />
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

</LinearLayout>