<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/default_image"
            android:contentDescription="@string/default_image"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/figma_one_section_item_title"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginEnd="16dp"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Title" />

            <TextView
                android:id="@+id/figma_one_section_item_artist"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="@string/artist" />
            <!-- 공간을 차지하여 나머지 뷰를 아래로 밀어주는 View -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/add_circle"
                    android:contentDescription="@string/btn_section_plus_image" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:text="@string/today_23_min"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/btn_play"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/right_button_2"
                    android:contentDescription="@string/btn_section_content_right_image" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>