<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".figma.FigmaOneActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_figma_one"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FEF7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_headline"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_figma_one">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/default_image"
            android:contentDescription="@string/default_image"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="124dp"
            android:layout_marginStart="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="220dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/headline"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="220dp"
                android:layout_height="24dp"
                android:text="@string/supporting_text"
                android:textSize="16sp"
                android:textStyle="normal" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/download"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_text_figma_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_headline">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/published_date"
            android:textSize="11sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/long_string"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_text_figma_one"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/section_title"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/right_button"
            android:contentDescription="@string/btn_section_title_right_image" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/figma_one_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"/>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/figma_two_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/customSeekBar"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:thumb="@drawable/custom_thumb"
                android:progressDrawable="@drawable/custom_progress"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="2dp"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/tvPlayTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="10sp"
                    tools:text="00:01"/>

                <TextView
                    android:id="@+id/tvFullTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="10sp"
                    tools:text="00:01"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/default_image"
                    android:contentDescription="@string/default_image"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bottom_navigation_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/title"/>

                    <TextView
                        android:id="@+id/bottom_navigation_artis_text"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="6dp"
                    android:layout_gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_bottom_navigation_stop"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="center"
                        android:src="@drawable/baseline_stop_24"
                        android:contentDescription="@string/pause" />

                    <ImageView
                        android:id="@+id/btn_bottom_navigation_start_and_pause"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/start_pause"
                        android:scaleType="center"
                        android:src="@drawable/play" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>